# Projet_IA_Puissance_4

./: .gitignore  CMakeLists.txt  README.md
doc/: rapport.docx
src/: ia.c  ia.h  jeu  jeu.c  jeu.h  jeu_morpion.c  makefile
